@@ -32,7 +32,10 @@
 	(PokerAvatarTestCase.test30_setPlayerImage): Wrote function.
 	(PokerAvatarTestCase.errorSetPokerPlayerImage): Wrote function.
 	(PokerAvatarTestCase.test31_errorSetPlayerImage): Wrote function.
+	(PokerAvatarTestCase.cashIn): Wrote function.
 	(PokerAvatarTestCase.test32_cashIn): Wrote function.
+	(PokerAvatarTestCase.cashQuery): Wrote function.
+	(PokerAvatarTestCase.test33_cashQuery): Wrote function.
 
 2008-02-23  Bradley M. Kuhn  <bkuhn@ebb.org>.
 
